package edu.hitsz.prop;

public class HpSupply extends AbstracyProp{
}
